k8s/digitalocean/30-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: votehub
spec:
  type: ClusterIP
  selector:
    app: votehub-api
  ports:
    - name: http
      port: 3100
      targetPort: 3100
