k8s/digitalocean/52-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: votehub
spec:
  type: ClusterIP
  selector:
    app: votehub-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
