k8s/digitalocean/62-alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: votehub
spec:
  type: ClusterIP
  selector:
    app: votehub-alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: 9093
